# weightmask

./: .gitignore  .pre-commit-config.yaml  README.md  TODO.md  benchmark_results.md  benchmark_satur.py  format.py  patch_test.sh  pixi.toml  pyproject.toml  refactor.py  refactor_script.py  replace_script.py  replace_script2.py  replace_script_satur.py  test_satur_optimization.py  weightmask.py  weightmask.yml
.github/workflows/: ci.yml
.jules/: bolt.md
docs/: api.md  installation.md  usage.md
examples/: README.md  cfht_megaprime_example.py  complex_simulation_example.py  real_world_robustness.py  test_real_mef.py
tests/: download_benchmarks.py  download_dark.py  simulate_and_test.py  simulate_and_test_backup.py  test_background.py  test_bad.py  test_benchmarks.py  test_cli.py  test_cli_process_hdu.py  test_cosmics.py  test_objects.py  test_robust_features.py  test_satur.py  test_streaks.py  test_utils.py  test_variance.py  test_weight.py
tests/benchmarks/: download_data.py  run.py
tests/benchmarks/manifests/: acs_compare.json  megacam_real.json
weightmask/: __init__.py  background.py  bad.py  cli.py  cosmics.py  objects.py  pipeline.py  satur.py  streaks.py  utils.py  variance.py  weight.py
