[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "weightmask"
version = "0.1"
authors = [
  { name="Seb Fabbro", email="sebfabbro@gmail.com" },
]
description = "Generates weight, mask, and confidence maps for astronomical FITS images."
readme = "README.md"
license = { file="LICENSE" } 
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)", 
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Astronomy",
]
dependencies = [
    "numpy",
    "astropy",
    "scikit-image",
    "sep",
    "PyYAML",
]

[project.urls]
"Homepage" = "https://github.com/sfabbro/weightmask"

# --- This section creates the command-line script ---
[project.scripts]
weightmask = "weightmask.cli:run_pipeline" # Tells pip: command 'weightmask' runs 'run_pipeline' function in 'weightmask/cli.py'